Accont icon shifted right in checkout page (Fixed previous feedback error)

--- a/packages/scandipwa/src/component/Header/Header.style.scss
+++ b/packages/scandipwa/src/component/Header/Header.style.scss
@@ -382,9 +382,14 @@
     }
 
     &_isCheckout {
+        .Header-Nav {
+            display: flex;
+            inset-inline-start: 32px;
+        }
+
         .Header {
             &-IconsWrapper {
-                width: 1335px;
+                width: 98%;
             }
 
             &-Button_type_account {
